@@ -1473,10 +1473,9 @@ empty directories from OLD-PATH."
 			  (concat old-dir "..")))))))))
 
 (defun gnus-set-file-modes (filename mode)
-  "Wrapper for set-file-modes.
-No-op if `gnus-set-file-modes' is set to nil."
-  (if gnus-set-file-modes
-      (set-file-modes filename mode)))
+  "Wrapper for set-file-modes."
+  (ignore-errors
+    (set-file-modes filename mode)))
 
 (provide 'gnus-util)
 
